--- a/css/style.css
+++ b/css/style.css
@@ -107,14 +107,46 @@ a {
 
 .editor-container {
 	display: flex;
+	flex-direction: column;
+	align-items: center;
 	width: 50%;
-	height: 360px;
+}
+
+.mac {
+	width: 100%;
+	background: black;
+	border-radius: 5px 5px 0px 0px;
+}
+
+.mac-img {
+	margin: 5px 0 0 5px;
+	width:60px;
+	height:20px;
 }
 
 .fundo-editor {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 	background: #6BD1FF;
 	border-radius: 5px;
 	width: 100%;
+	height: 365px;
+	padding: 2rem;
+}
+
+.fundo-editor .editor-codigo {
+	width: 100%;
+	height: 100%;
+	background-color: black;
+	border: none;
+	border-radius: 0px 0px 5px 5px;
+	color: white;
+	display: block;
+	margin: 0 auto;
+	resize: none;
+	padding: 20px;
+	font-size: 1.1em;
 }
 
 .botao-visualizarMarcacao {
@@ -126,20 +158,6 @@ a {
 	border-radius: 5px;
 	color: #eee;
 	cursor: pointer;
-}
-
-.fundo-editor .editor-codigo {
-	width: 90%;
-	height: 80%;
-	background-color: black;
-	border: none;
-	border-radius: 5px;
-	color: white;
-	display: block;
-	margin: 35px 30px;
-	resize: none;
-	padding: 20px;
-	font-size: 1.1em;
 }
 
 .editor-codigo::before {
