--- a/css/comunidade.css
+++ b/css/comunidade.css
@@ -9,7 +9,7 @@
 	flex-wrap: wrap;
 	justify-content: space-between;
 	width: 75%;
-	margin-right: 20px;
+	margin-right: 30px;
 }
 
 .projeto-item {
@@ -36,6 +36,16 @@
 	width: 100%;
 	height: 70%;
 	background-color: #9AFF6B;
+}
+
+.cartao1 {
+	background-color: #6B83FF;
+}
+.cartao2 {
+	background-color: #FFC46B;
+}
+.cartao3 {
+	background-color: #FF6BCD;
 }
 
 .macbuttons-editor {
@@ -148,5 +158,25 @@ code {
 .id-usuario {
 	color: white;
 	margin-left: 5px;
+}
+
+@media screen and (max-width: 1024px) {
+	.projetos-container {
+		flex-direction: column;
+		width: 100%;
+		height: 80%;
+		margin: auto 10px;
+	}
+
+	.projeto-item {
+		width: 100%;
+		height: calc(100vh - 135px);
+	}
+	
+
+}
+
+@media screen and (max-width: 400px) {
+	
 }
 
