--- a/css/menu.css
+++ b/css/menu.css
@@ -1,11 +1,11 @@
 .menu {
 	color: #bbb;
-	width: 20%;
+	width: 15%;
 	letter-spacing: 5px;
 	font-size: 0.9em;
 	margin-left: 10px;
 	justify-content: space-around;
-	height: 200px;
+	height: 100%;
 }
 
 ul .menu-itens {
@@ -41,9 +41,16 @@ a li:hover {
 	background: rgba(200,200,200,0.5);
 }
 
-.comunidade-item {
-	display: flex;
-	align-items: center;
+.menu__item-name {
+	padding: 10px 10px;
+	letter-spacing: normal;
+}
+
+.menu__editor-item {
+	opacity: 100%;
+}
+
+.menu__comunidade-item {
 	opacity: 60%;
 }
 
@@ -61,7 +68,9 @@ a {
 	padding: 10px;
 }
 
-.title-menuitems {
-	letter-spacing: 1px;
-	margin-left: 10px;
+
+@media screen and (max-width: 1024px) {
+	.menu {
+		display: none;
+	}
 }
