--- a/css/style.css
+++ b/css/style.css
@@ -17,9 +17,19 @@ body {
 	width: 50%;
 }
 
+.fundo-editor {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	border-radius: 5px;
+	width: 100%;
+	height: 451px;
+	padding: 2rem;
+}
+
 .mac {
 	width: 100%;
-	background: black;
+	background: #292936;
 	border-radius: 5px 5px 0px 0px;
 }
 
@@ -29,21 +39,10 @@ body {
 	height:20px;
 }
 
-.fundo-editor {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	background: #6BD1FF;
-	border-radius: 5px;
-	width: 100%;
-	height: 365px;
-	padding: 2rem;
-}
-
 .fundo-editor .editor-codigo, .codigo-wrapper {
 	width: 100%;
 	height: 100%;
-	background-color: black;
+	background-color: #292936;
 	border: none;
 	border-radius: 0px 0px 5px 5px;
 	color: white;
@@ -54,12 +53,13 @@ body {
 	font-size: 1.1em;
 }
 
+.codigo-wrapper {
+	overflow-y: auto;
+}
+
 .editor-codigo {
 	white-space: pre-wrap;
 }
-
-
-
 
 .botao-visualizarMarcacao {
 	width: 100%;
@@ -85,62 +85,66 @@ body {
 
 .editor-codigo:focus {
 	outline: none;
-	box-shadow: 5px 5px 10px #505050;
 }
 
 .conteudo-principal {
 	display: flex;
 	justify-content: space-between;
-	align-items: top;
 	margin-top: 40px;
 }
 
 .configuracoes-projeto {
 	display: flex;
 	flex-direction: column;
+	justify-content: space-between;
 	height: 530px;
 	width: 20%;
 	margin-right: 10px;
 }
 
-.nome-projeto {
-	background-color: rgba(255,255,255,0.3);
-	border:none;
-	border-radius: 5px;
-	padding: 5px 5px;
-	font-size: 15px;
-	color: #bbb;
-	margin: 10px 0;
-	height: 10%;
+.container-config {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-around;
 }
 
-.descricao-projeto {
+.seuProjeto {
+	height: 40%;
+}
+
+.seuProjeto__nome {
+	border:none;
+	border-radius: 5px;
+	padding: 5px 5px;
+	font-size: 15px;
+	color: #bbb;
+}
+
+.seuProjeto__descricao {
 	background-color: rgba(255,255,255,0.3);
 	border:none;
 	border-radius: 5px;
 	padding: 5px 5px;
 	font-size: 15px;
 	color: #bbb;
-	height: 35%;
+	height: 80px;
 	margin-top: 15px;
 	resize: none;
-	height: 15%;
 }
 
-.titulo-personalizacao {
-	margin-top: 30px;
+.personalizacao {
+	height: 30%;
 }
 
-.personalizacao-select {
-	background-color: rgba(255,255,255,0.3);
-	border:none;
-	border-radius: 5px;
-	padding: 5px 5px;
-	font-size: 15px;
-	color: #bbb;
-	margin: 10px 0;
-	color: #bbb;
-	height: 10%;
+.configuracao__input-container {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	height: 70%;
+}
+
+.personalizacao__select {
+	width: 100%;
 }
 
 .personalizacao-select option {
@@ -150,8 +154,7 @@ body {
 
 .input-color {
 	width: 100%;
-	margin-top: 15px;
-	height: 10%;
+	height: 50px;
 	border-radius: 5px;
 	background-color: transparent;
     border: 1px solid #FFFFFF;
@@ -169,21 +172,70 @@ body {
 	cursor: pointer;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 1024px) {
 	main {
-		display: flex;
+		margin: auto 10px;
+	}
+	.conteudo-principal {
 		flex-direction: column;
-		justify-content: space-around;
+		align-items: center;
+	}
+	.editor-container, .configuracoes-projeto {
 		width: 100%;
 	}
 
-	.menu {
-		display: none;
+	.configuracoes-projeto {
+		margin-top: 30px;
 	}
 
-	.editor-container {
-		width: auto;
-		margin: 5px 10px;
+	.personalizacao {
+		height: 20%;
 	}
+	
+	.personalizacao__inputs {
+		flex-direction: row;
+		align-items: center;
+		justify-content: space-between;
+	}
+
+	.personalizacao__select {
+		width: 48%;
+	}
+
+	.input-color {
+		width: 48%;
+	}
+
 }
+
+@media screen and (max-width: 400px) {
+	.editor-container {
+		height: calc(100vh - 120px);
+		justify-content: space-around;
+	}
+	
+	.fundo-editor {
+		height: 80%;
+	}
+
+	.personalizacao {
+		height: 30%;
+	}
+	
+	.personalizacao__inputs {
+		flex-direction: column;
+		justify-content: space-between;
+	}
+
+	.personalizacao__select {
+		width: 100%;
+	}
+
+	.input-color {
+		width: 100%;
+	}
+	
+}
+
+
 
