--- a/css/comunidade.css
+++ b/css/comunidade.css
@@ -36,6 +36,7 @@
 	width: 100%;
 	height: 70%;
 	background-color: #9AFF6B;
+	overflow-y: auto;
 }
 
 .cartao1 {
@@ -95,6 +96,9 @@ code {
 
 .descricao-projeto {
 	background-color: transparent;
+	height: 24px;
+	color: rgba(255, 255, 255, .8);
+	margin-top: 20px;
 	padding: 0 0 0 0;
 }
 
@@ -117,6 +121,15 @@ code {
 	align-items: center;
 	justify-content: space-around;
 	width: 40%;
+	gap: 10px;
+	cursor: pointer;
+	padding: 6px;
+	border-radius: 30px;
+	transition: 0.5s all;
+}
+
+.comment:hover {
+	background: rgba(200,200,200,0.5);
 }
 
 .fa-comment {
@@ -133,9 +146,18 @@ code {
 	align-items: center;
 	width: 40%;
 	justify-content: space-around;
+	gap:8px;
+	cursor: pointer;
+	padding: 6px;
+	border-radius: 30px;
+	transition: 0.5s all;
 }
 
-.like-count {
+.like:hover {
+	background: rgba(200,200,200,0.5);
+}
+
+.like__contagem {
 	width: 40%;
 	color: white;
 }
@@ -153,6 +175,14 @@ code {
 	align-items: center;
 	justify-content: center;
 	width: 30%;
+	padding: 6px;
+	border-radius: 5px;
+	transition: 0.5s all;
+	cursor: pointer;
+}
+
+.usuario:hover {
+	background: rgba(200,200,200,0.5);
 }
 
 .id-usuario {
