--- a/css/base.css
+++ b/css/base.css
@@ -6,6 +6,11 @@
 	padding: 5px 5px;
 	font-size: 15px;
 	color: #bbb;
+    transition: 0.5s;
+}
+
+.text-input:hover {
+    background-color: rgba(255,255,255,0.35);
 }
 
 .sidebar-titulo {
