--- a/css/comunidade.css
+++ b/css/comunidade.css
@@ -90,13 +90,13 @@
 	justify-content: space-between;
 	align-items: center;
 	height: 10%;
-	padding: 0 5px 0 5px;
+	padding: 0 0px 0 15px;
 }
 
 .comment-like {
 	display: flex;
 	justify-content: space-around;
-	width: 30%;
+	width: 40%;
 }
 
 .comment {
@@ -104,7 +104,7 @@
 	align-items: center;
 	justify-content: space-around;
 	width: 40%;
-	gap: 10px;
+	gap: 5px;
 	cursor: pointer;
 	padding: 6px;
 	border-radius: 30px;
@@ -129,7 +129,7 @@
 	align-items: center;
 	width: 40%;
 	justify-content: space-around;
-	gap:8px;
+	gap:5px;
 	cursor: pointer;
 	padding: 6px;
 	border-radius: 30px;
@@ -142,6 +142,24 @@
 
 .like__contagem {
 	width: 40%;
+	color: white;
+}
+
+.exportar {
+	display: flex;
+	align-items: center;
+	gap: 5px;
+	padding: 6px;
+	border-radius: 5px;
+	transition: 0.5s all;
+}
+
+.exportar:hover {
+	background: rgba(200,200,200,0.5);
+	cursor: pointer;
+}
+
+.exportar-title {
 	color: white;
 }
 
@@ -184,6 +202,12 @@
 	.projeto__item {
 		width: 100%;
 		height: calc(100vh - 135px);
+	}
+
+	.comment-like {
+		display: flex;
+		justify-content: space-around;
+		width: 60%;
 	}
 	
 
