--- a/css/style.css
+++ b/css/style.css
@@ -64,7 +64,7 @@ pre {
 	white-space: pre-wrap;
 	width: 100%;
 	height: 100%;
-	overflow: hidden;
+	overflow-y: auto;
 }
 
 .editor__codigo:focus {
